005 Nginx Web Server Using Custom Namespace, Application Load Balancer Service, Deployment, Pod, ReplicaSet/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: my-namespace
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # Change to "nlb-ip" or "clb" if needed
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
